--- a/quartz/styles/checkboxes.scss
+++ b/quartz/styles/checkboxes.scss
@@ -20,7 +20,7 @@ input.checkbox-toggle {
 
   appearance: none;
   position: absolute;
-  top: calc(0.75 * $base-margin);
+  top: 0.3em;
   width: var(--checkbox-size);
   height: var(--checkbox-size);
   margin: 0;
